Add source qks key to env, and limit to 6 chars

--- a/templates/kraken/application/target.add.twig
+++ b/templates/kraken/application/target.add.twig
@@ -35,9 +35,9 @@
                 </li>
 
                 <li>
-                    <label for="enc-key">QKS Identifier</label>
+                    <label for="enc-key">QKS Encryption Key</label>
 
-                    <input type="text" name="key" id="enc-key" maxlength="100" value="{{ form.key }}" class="text-input">
+                    <input type="text" name="key" id="enc-key" maxlength="6" value="{{ form.key }}" class="text-input t30">
                     <small class="additional">
                         Configuration is encrypted with this private key from QKS.
                     </small>
