--- a/templates/kraken/environment.add.twig
+++ b/templates/kraken/environment.add.twig
@@ -39,17 +39,18 @@
                     <h2>Consul</h2>
                 </li>
                 <li>
-                    <label for="env-service">Consul Service URL</label>
-                    <small class="additional">
-                        The consul service associated with this environment.
-                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
-                    </small>
+                    <label for="env-service">
+                        <span class="tooltipped tooltipped-e" aria-label="Consul service associated with this environment.">Service URL</span>
+                    </label>
 
                     <input type="text" name="consul_service" id="env-service" maxlength="200" value="{{ form.consul_service }}" class="text-input">
+                   <small class="additional">Must be the full URL and begin with <code>http://</code> or <code>https://</code>.</small>
                 </li>
                 <li>
-                    <label for="env-token">Consul Token</label>
-                    <small class="additional">Access token for consul. Optional.</small>
+                    <label for="env-token">
+                        {{ macros.icon('locked') }}
+                        <span class="tooltipped tooltipped-e" aria-label="Access token for Consul. Optional if not using ACL.">Access Token</span>
+                    </label>
 
                     <input type="text" name="consul_token" id="env-token" maxlength="40" value="{{ form.consul_token }}" class="text-input" autocomplete="off">
                 </li>
@@ -58,23 +59,33 @@
                     <h2>QKS</h2>
                 </li>
                 <li>
-                    <label for="env-qks_service">QKS Service URL</label>
-                    <small class="additional">
-                        The qks service associated with this environment.
-                        <br>Must be the full URL and begin with <code>http://</code> or <code>https://</code>.
-                    </small>
+                    <label for="env-qks_service">
+                        <span class="tooltipped tooltipped-e" aria-label="QKS service associated with this environment.">Service URL</span>
+                    </label>
 
                     <input type="text" name="qks_service" id="env-qks_service" maxlength="200" value="{{ form.qks_service }}" class="text-input">
+                    <small class="additional">Must be the full URL and begin with <code>http://</code> or <code>https://</code>.</small>
                 </li>
                 <li>
-                    <label for="env-qks_client">QKS Client ID</label>
-                    <small class="additional">Application Client ID from API Gateway.</small>
+                    <label for="env-qks_key">
+                        <span class="tooltipped tooltipped-e" aria-label="QKS Encryption Key used as sending key.">Encryption Key</span>
+                    </label>
+
+                    <input type="text" name="qks_key" id="env-qks_key" maxlength="6" value="{{ form.qks_key }}" class="text-input t30">
+                </li>
+
+                <li>
+                    <label for="env-qks_client">
+                        <span class="tooltipped tooltipped-e" aria-label="Application Client ID from API Gateway.">Client ID</span>
+                    </label>
 
                     <input type="text" name="qks_client" id="env-qks_client" maxlength="100" value="{{ form.qks_client }}" class="text-input">
                 </li>
                 <li>
-                    <label for="env-qks_secret">QKS Client Secret</label>
-                    <small class="additional">Application Client Secret from API Gateway.</small>
+                    <label for="env-qks_secret">
+                        {{ macros.icon('locked') }}
+                        <span class="tooltipped tooltipped-e" aria-label="Application Client ID from API Gateway.">Client Secret</span>
+                    </label>
 
                     <input type="text" name="qks_secret" id="env-qks_secret" maxlength="40" value="{{ form.qks_secret }}" class="text-input" autocomplete="off">
                 </li>
