Change /repositories to /applications

--- a/templates/_partial/layout.header.twig
+++ b/templates/_partial/layout.header.twig
@@ -32,7 +32,7 @@
                         {{ nav_macros.optionalNavlink('Dashboard', 'dashboard', 'dashboard') }}
                         {{ nav_macros.optionalNavlink('Queue', 'queue', 'in') }}
 
-                        {{ nav_macros.optionalNavlink('Applications', 'repositories', 'list') }}
+                        {{ nav_macros.optionalNavlink('Applications', 'applications', 'list') }}
 
                         {{ nav_macros.optionalNavlink('Servers', 'servers', 'server') }}
                         {{ nav_macros.optionalNavlink('Environments', 'environments', 'leaf') }}
