--- a/templates/admin/dashboard.twig
+++ b/templates/admin/dashboard.twig
@@ -9,7 +9,7 @@
     <h2 class="leader">Manage Deployments</h2>
     <ul class="button-list">
         <li>
-            <a href="{{ urlFor('repositories') }}" class="btn">
+            <a href="{{ urlFor('applications') }}" class="btn">
                 {{ macros.icon('list') }} Applications
             </a>
         </li>
