--- a/templates/group/admin.add.twig
+++ b/templates/group/admin.add.twig
@@ -33,7 +33,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Add Group"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('repositories') }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('applications') }}">Cancel</a></li>
             </ul>
         </form>
     </div>
