--- a/templates/group/group.twig
+++ b/templates/group/group.twig
@@ -55,7 +55,7 @@
                 <li><a class="btn btn--destructive" href="{{ urlFor('group.admin.remove', {id: group.id}) }}">Remove Group</a></li>
             {% endif %}
 
-        <li><a class="btn btn--secondary" href="{{ urlFor('repositories') }}">Applications</a></li>
+        <li><a class="btn btn--secondary" href="{{ urlFor('applications') }}">Applications</a></li>
         {% endif %}
     </ul>
 
