--- a/templates/help/help.twig
+++ b/templates/help/help.twig
@@ -99,7 +99,7 @@
         <li>
             <strong>Projects belong to groups. Determine what group your application should be part of, or create a new group.</strong>
             <p>
-                Projects are often grouped by team or business area. You can see the ones that already exist by viewing the <a href="{{ urlFor('repositories') }}">Applications page</a>.
+                Projects are often grouped by team or business area. You can see the ones that already exist by viewing the <a href="{{ urlFor('applications') }}">Applications page</a>.
             </p>
         </li>
         <li>
