--- a/templates/application/application.add.twig
+++ b/templates/application/application.add.twig
@@ -73,7 +73,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Add Application"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('repositories') }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('applications') }}">Cancel</a></li>
             </ul>
 
         </form>
