--- a/templates/admin/permissions/deployment.remove.twig
+++ b/templates/admin/permissions/deployment.remove.twig
@@ -24,7 +24,7 @@
             </dd>
 
             <dt class="split__title">Application</dt>
-            <dd><a href="{{ urlFor('repository', {id: userPermission.application.id}) }}">{{ userPermission.application.name }}</a></dd>
+            <dd><a href="{{ urlFor('application', {application: userPermission.application.id}) }}">{{ userPermission.application.name }}</a></dd>
         </dl>
     </div>
 
