--- a/templates/application/application.edit.twig
+++ b/templates/application/application.edit.twig
@@ -56,10 +56,9 @@
                 </li>
             </ul>
 
-
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Save Changes"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('repository', {id: application.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('application', {application: application.id}) }}">Cancel</a></li>
             </ul>
 
         </form>
