--- a/templates/application/encrypted/add.encrypted.property.twig
+++ b/templates/application/encrypted/add.encrypted.property.twig
@@ -58,7 +58,7 @@
 
             <ul class="button-list">
                 <li><input class="btn btn--action" type="submit" value="Add Encrypted Property"></li>
-                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('repository.encrypted', {repository: application.id}) }}">Cancel</a></li>
+                <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('encrypted', {application: application.id}) }}">Cancel</a></li>
             </ul>
         </form>
     </div>
