--- a/templates/queue.history.twig
+++ b/templates/queue.history.twig
@@ -51,7 +51,7 @@
                         </td>
 
                         <td>
-                            <a href="{{ urlFor('repository.status', {id: job.application.id}) }}">{{ job.application.name }}</a>
+                            <a href="{{ urlFor('application.status', {application: job.application.id}) }}">{{ job.application.name }}</a>
                         </td>
 
                         <td>
