--- a/templates/_partial-form/add-deployment.twig
+++ b/templates/_partial-form/add-deployment.twig
@@ -8,7 +8,7 @@ Needs the following parameters:
 - rsync_only
 
 #}
-<form method="post" action="{{ urlFor('repository.deployments.add', {repository: application.id}) }}">
+<form method="post" action="{{ urlFor('deployments.add', {application: application.id}) }}">
     <ul class="form-fields">
         <li>
             <label for="server">
@@ -88,7 +88,7 @@ Needs the following parameters:
 
     <ul class="button-list">
         <li><input class="btn btn--action" type="submit" value="Add Deployment"></li>
-        <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('repository.deployments', {repository: application.id}) }}">Cancel</a></li>
+        <li class="button-list__fixed"><a class="btn btn--secondary" href="{{ urlFor('deployments', {application: application.id}) }}">Cancel</a></li>
     </ul>
 
 </form>
