--- a/templates/_partial/user.status.twig
+++ b/templates/_partial/user.status.twig
@@ -55,7 +55,7 @@
             <dd>
                 <ul class="inline-list--comma">
                     {% for application in leadApplications %}
-                        <li><a href="{{ urlFor('repository', {id: application.id}) }}">{{ application.name }}</a></li>
+                        <li><a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a></li>
                     {% endfor %}
                 </ul>
             </dd>
@@ -66,7 +66,7 @@
             <dd>
                 <ul class="inline-list--comma">
                     {% for application in nonProdApplications %}
-                        <li><a href="{{ urlFor('repository', {id: application.id}) }}">{{ application.name }}</a></li>
+                        <li><a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a></li>
                     {% endfor %}
                 </ul>
             </dd>
@@ -77,7 +77,7 @@
             <dd>
                 <ul class="inline-list--comma">
                     {% for application in prodApplications %}
-                        <li><a href="{{ urlFor('repository', {id: application.id}) }}">{{ application.name }}</a></li>
+                        <li><a href="{{ urlFor('application', {application: application.id}) }}">{{ application.name }}</a></li>
                     {% endfor %}
                 </ul>
             </dd>
