--- a/templates/application/application.twig
+++ b/templates/application/application.twig
@@ -23,10 +23,10 @@
     {{ block('legacy_commands') }}
 
     <ul class="button-list">
-        <li><a class="btn" href="{{ urlFor('repository.status', {id: application.id}) }}">Application Status</a></li>
+        <li><a class="btn" href="{{ urlFor('application.status', {application: application.id}) }}">Application Status</a></li>
 
-        <li><a class="btn btn--secondary" href="{{ urlFor('repository.encrypted', {repository: application.id}) }}">Encrypted Properties</a></li>
-        <li><a class="btn btn--secondary" href="{{ urlFor('repository.deployments', {repository: application.id}) }}">Deployment Targets</a></li>
+        <li><a class="btn btn--secondary" href="{{ urlFor('encrypted', {application: application.id}) }}">Encrypted Properties</a></li>
+        <li><a class="btn btn--secondary" href="{{ urlFor('deployments', {application: application.id}) }}">Deployment Targets</a></li>
 
         {% if kraken %}
             <li><a class="btn btn--secondary" href="{{ urlFor('kraken.application', {application: kraken.id}) }}">{{ macros.icon('squid') }} Kraken Configuration</a></li>
@@ -36,11 +36,11 @@
     {% if canEdit or canRemove %}
         <ul class="leader button-list button-list--half">
             {% if canEdit %}
-                <li><a class="btn btn--action" href="{{ urlFor('repository.admin.edit', {repository: application.id}) }}">Edit Application</a></li>
+                <li><a class="btn btn--action" href="{{ urlFor('application.edit', {application: application.id}) }}">Edit Application</a></li>
             {% endif %}
 
             {% if canRemove %}
-                <li class="button-list__fixed"><a class="btn btn--destructive" href="{{ urlFor('repository.admin.remove', {id: application.id}) }}">Remove Application</a></li>
+                <li class="button-list__fixed"><a class="btn btn--destructive" href="{{ urlFor('application.remove', {application: application.id}) }}">Remove Application</a></li>
             {% endif %}
         </ul>
     {% endif %}
