--- a/templates/kraken/application/application.twig
+++ b/templates/kraken/application/application.twig
@@ -50,7 +50,7 @@
             {% endif %}
 
             {% if application.halApplication %}
-                <li><a class="btn btn--secondary" href="{{ urlFor('repository.status', {id: application.halApplication.id}) }}">{{ macros.icon('spinner-3') }} HAL 9000</a></li>
+                <li><a class="btn btn--secondary" href="{{ urlFor('application.status', {application: application.halApplication.id}) }}">{{ macros.icon('spinner-3') }} HAL 9000</a></li>
             {% endif %}
 
             <li><a class="btn btn--secondary" href="http://core/app/{{ application.coreId }}">{{ macros.icon('spinner') }} Core Website</a></li>
