--- a/templates/kraken/application/status.twig
+++ b/templates/kraken/application/status.twig
@@ -17,7 +17,7 @@
         <li><a class="btn" href="{{ urlFor('kraken.application', {application: application.id}) }}">Application</a></li>
 
         {% if application.halApplication %}
-            <li><a class="btn btn--secondary" href="{{ urlFor('repository.status', {id: application.halApplication.id}) }}">{{ macros.icon('spinner-3') }} HAL 9000</a></li>
+            <li><a class="btn btn--secondary" href="{{ urlFor('application.status', {application: application.halApplication.id}) }}">{{ macros.icon('spinner-3') }} HAL 9000</a></li>
         {% endif %}
 
         <li><a class="btn btn--secondary" href="{{ urlFor('kraken.configuration.history.page1', {application: application.id})}}">Configuration History</a></li>
